--- a/.github/workflows/test-result.yml
+++ b/.github/workflows/test-result.yml
@@ -37,4 +37,4 @@ jobs:
         name: Test result
         path: build/test-results/**/*.xml
         reporter: java-junit
-        fail-on-error: true
+        fail-on-error: false
