--- a/.github/workflows/test-result.yml
+++ b/.github/workflows/test-result.yml
@@ -1,10 +1,14 @@
 name: Generate Gradle Test Report
 on:
+  workflow_dispatch:    
   push:
-    branches: [ "main" ]
+    branches: 
+      - main
+      - master
   pull_request:
-    branches: [ "main" ]
-
+    branches: 
+      - main
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
